Missing option work

--- a/.github/workflows/oracle-db-patching.yml
+++ b/.github/workflows/oracle-db-patching.yml
@@ -45,6 +45,7 @@ on:
       VerboseOutput:
         description: "Verbose Output level"
         type: choice
+        options:
           - ""
           - "-v"
           - "-vv"
