--- a/.github/workflows/oracle-db-set-parameters.yml
+++ b/.github/workflows/oracle-db-set-parameters.yml
@@ -45,18 +45,20 @@ jobs:
       image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.1
     timeout-minutes: 1440
     env:
-      command: ansible-playbook inventory/ansible/roles/oracle-db-parameters/set_oracle_parameters.yml
+      command: ansible-playbook operations/ansible/roles/oracle-db-parameters/set_oracle_parameters.yml
       inventory: inventory/ansible
     continue-on-error: false
     steps:
 
-      # - name: Checkout Role From modernisation-platform-configuration-management
-      #   uses: actions/checkout@v4
-      #   with:
-      #     repository: ministryofjustice/modernisation-platform-configuration-management
-      #     path: operations
-      #     ref: ${{ github.event.inputs.SourceConfigVersion }}
-      #     fetch-depth: 0
+      - name: Checkout Role From modernisation-platform-configuration-management
+        uses: actions/checkout@v4
+        with:
+          repository: ministryofjustice/modernisation-platform-configuration-management
+          sparse-checkout-cone-mode: false
+          sparse-checkout: ansible/roles/oracle-db-parameters
+          path: operations
+          ref: ${{ github.event.inputs.SourceConfigVersion }}
+          fetch-depth: 0
 
       - name: Checkout Inventory From modernisation-platform-configuration-management
         uses: actions/checkout@v4
@@ -66,7 +68,6 @@ jobs:
           sparse-checkout: |
             ansible/hosts
             ansible/group_vars
-            ansible/roles/oracle-db-parameters
           path: inventory
           ref: ${{ github.event.inputs.SourceConfigVersion }}
           fetch-depth: 0
