--- a/.github/workflows/ldap-data-refresh.yml
+++ b/.github/workflows/ldap-data-refresh.yml
@@ -44,11 +44,13 @@ jobs:
             exit 1
           fi
           
-          # Check that the destination environment is not a higher environment than the source environment
-          indexof() { i=-1; for ((j=0;j<${#$2[@]};j++)); do [ "${$2[$j]}" = "$1" ] && { i=$j; break; } done; echo $i; }
+          list=('dev' 'test' 'preprod' 'prod') 
           
-          source_env_index=index_of "${{ github.event.inputs.source_env }}" ('dev' 'test' 'preprod' 'prod')
-          destination_env_index=index_of "${{ github.event.inputs.destination_env }}" ('dev' 'test' 'preprod' 'prod')
+          # Check that the destination environment is not a higher environment than the source environment
+          indexof() { i=-1; for ((j=0;j<${#list[@]};j++)); do [ "${list[$j]}" = "$1" ] && { i=$j; break; } done; echo $i; }
+          
+          source_env_index=index_of "${{ github.event.inputs.source_env }}"
+          destination_env_index=index_of "${{ github.event.inputs.destination_env }}"
           
           if [ "${source_env_index}" -lt "${destination_env_index}" ]; then
             echo "Destination environment must be a higher environment than the source environment"
