--- a/.github/workflows/ldap-data-refresh.yml
+++ b/.github/workflows/ldap-data-refresh.yml
@@ -5,33 +5,24 @@ permissions:
 on:
   workflow_dispatch:
     inputs:
-      account:
-        description: AWS account the environment is in
-        required: true
-        type: choice
-        options:
-          - "development"
-          - "test"
-          - "preproduction"
-          - "production"
       source_env:
         description: environment to copy data from [dev|test|preprod|prod]
         required: true
         type: choice
         options:
-          - dev
-          - test
-          - preprod
-          - prod
+          - development-dev
+          - development-test
+          - preproduction-preprod
+          - production-prod
       destination_env:
         description: environment to copy data to [dev|test|preprod|prod]
         required: true
         type: choice
         options:
-          - dev
-          - test
-          - preprod
-          - prod
+          - development-dev
+          - development-test
+          - preproduction-preprod
+          - production-prod
       source_recovery_point_id:
         description: AWS Backup ID of the source EFS backup. Leaving this blank will use the latest backup
         required: false
@@ -52,7 +43,7 @@ jobs:
           source_env="${{ github.event.inputs.source_env }}"
           destination_env="${{ github.event.inputs.destination_env }}"
           
-          if [[ "${source_env}" == "prod" && "${destination_env}" != "preprod" ]]; then
+          if [[ "${source_env}" == "production-prod" && "${destination_env}" != "preproduction-preprod" ]]; then
             echo "Cannot copy from prod to ${destination_env}"
             exit 1
           fi
@@ -88,7 +79,7 @@ jobs:
           echo "Copying from ${source_env} to ${destination_env}"
   destination-pre:
     runs-on: ubuntu-latest
-    environment: delius-core-${{ github.event.inputs.account }}-${{ github.event.inputs.destination_env }}
+    environment: delius-core-${{ github.event.inputs.destination_env }}
     steps:
       - name: Scale ECS Service to 0
         id: scale-ecs-service
@@ -110,7 +101,7 @@ jobs:
           echo "ECS Service scaled to 0"
   source:
     runs-on: ubuntu-latest
-    environment: delius-core-${{ github.event.inputs.account }}-${{ github.event.inputs.source_env }}
+    environment: delius-core-${{ github.event.inputs.source_env }}
     steps:
       - name: install aws-cli
         run: |
@@ -196,7 +187,7 @@ jobs:
           echo "Datasync task from ${{ github.event.inputs.source_env }} to ${{ github.event.inputs.destination_env }} completed. Switching to destination account"
   destination-post:
     runs-on: ubuntu-latest
-    environment: delius-core-${{ github.event.inputs.account }}-${{ github.event.inputs.destination_env }}
+    environment: delius-core-${{ github.event.inputs.destination_env }}
     steps:
       - name: install aws-cli
         run: |
