--- a/.github/workflows/ldap-data-refresh.yml
+++ b/.github/workflows/ldap-data-refresh.yml
@@ -10,19 +10,19 @@ on:
         required: true
         type: choice
         options:
-          - development-dev
-          - development-test
-          - preproduction-preprod
-          - production-prod
+          - dev
+          - test
+          - preprod
+          - prod
       destination_env:
         description: environment to copy data to [dev|test|preprod|prod]
         required: true
         type: choice
         options:
-          - development-dev
-          - development-test
-          - preproduction-preprod
-          - production-prod
+          - dev
+          - test
+          - preprod
+          - prod
       source_recovery_point_id:
         description: AWS Backup ID of the source EFS backup. Leaving this blank will use the latest backup
         required: false
