--- a/.github/workflows/ldap-data-refresh.yml
+++ b/.github/workflows/ldap-data-refresh.yml
@@ -129,7 +129,7 @@ jobs:
       - name: Set recovery point ARN to use
         id: set-recovery-point-arn
         run: |
-          if [[ -z "${{ github.event.inputs.source_recovery_point_id }}" ]]; then
+          if [[ "${{ github.event.inputs.source_recovery_point_id }}" == "" ]]; then
             echo "No RECOVERY_POINT_ARN ID provided, using latest backup"
             echo "RECOVERY_POINT_ARN=$(aws backup list-recovery-points-by-backup-vault --backup-vault-name ${{ github.event.inputs.source_env }}-ldap-efs-backup-vault --query 'reverse(sort_by(RecoveryPoints[?ResourceType==`EFS`], &CreationDate))[0].RecoveryPointArn' --output text | head -n 1)" >> GITHUB_OUTPUT
           else
