--- a/.github/workflows/ldap-data-refresh.yml
+++ b/.github/workflows/ldap-data-refresh.yml
@@ -126,20 +126,20 @@ jobs:
           sudo apt-get install -y python3-pip
           sudo pip3 install awscli
 
-      - name: Set recovery point ARN to use
-        id: set-recovery-point-arn
+      - name: Use latest recovery point arn
+        if: ${{ github.event.inputs.source_recovery_point_id == '' }}
         run: |
-          if [[ "${{ github.event.inputs.source_recovery_point_id }}" == "" ]]; then
             echo "No RECOVERY_POINT_ARN ID provided, using latest backup"
-            echo "RECOVERY_POINT_ARN=$(aws backup list-recovery-points-by-backup-vault --backup-vault-name ${{ github.event.inputs.source_env }}-ldap-efs-backup-vault --query 'reverse(sort_by(RecoveryPoints[?ResourceType==`EFS`], &CreationDate))[0].RecoveryPointArn' --output text | head -n 1)" >> GITHUB_OUTPUT
-          else
-            echo "RECOVERY_POINT_ARN=arn:aws:backup:eu-west-2:${{ vars.AWS_ACCOUNT_ID }}:recovery-point:${{ github.event.inputs.source_recovery_point_id }}" >> GITHUB_OUTPUT
-          fi
+            echo "RECOVERY_POINT_ARN=$(aws backup list-recovery-points-by-backup-vault --backup-vault-name ${{ github.event.inputs.source_env }}-ldap-efs-backup-vault --query 'reverse(sort_by(RecoveryPoints[?ResourceType==`EFS`], &CreationDate))[0].RecoveryPointArn' --output text | head -n 1)" >> GITHUB_ENV
+
+      - name: Use provided recovery point arn
+        if: ${{ github.event.inputs.source_recovery_point_id != '' }}
+        run: echo "RECOVERY_POINT_ARN=arn:aws:backup:eu-west-2:${{ vars.AWS_ACCOUNT_ID }}:recovery-point:${{ github.event.inputs.source_recovery_point_id }}" >> GITHUB_ENV
 
       - name: Create a temporary EFS resource with AWS Backup recovery point
         id: create-efs-from-backup
         run: |
-          echo RESTORE_JOB_ID=$(aws backup start-restore-job --recovery-point-arn ${{ steps.set-recovery-point-arn.outputs.RECOVERY_POINT_ARN }} --metadata file-system-id=xxx newFileSystem=true CreationToken=gha-ldap-data-refresh-${{github.run_id }} --output text --query 'RestoreJobId') >> GITHUB_OUTPUT
+          echo "RESTORE_JOB_ID=$(aws backup start-restore-job --recovery-point-arn ${{ env.RECOVERY_POINT_ARN }} --metadata file-system-id=xxx newFileSystem=true CreationToken=gha-ldap-data-refresh-${{github.run_id }} --output text --query 'RestoreJobId')" >> GITHUB_OUTPUT
           
       - name: Wait for restore to complete
         id: wait-for-restore
