--- a/.github/workflows/ldap-data-refresh.yml
+++ b/.github/workflows/ldap-data-refresh.yml
@@ -136,6 +136,9 @@ jobs:
         if: ${{ github.event.inputs.source_recovery_point_id != '' }}
         run: echo RECOVERY_POINT_ARN=arn:aws:backup:eu-west-2:${{ vars.AWS_ACCOUNT_ID }}:recovery-point:${{ github.event.inputs.source_recovery_point_id }} >> GITHUB_ENV
 
+      - name: echo recovery point arn
+        run: echo ${{ env.RECOVERY_POINT_ARN }}
+
       - name: Create a temporary EFS resource with AWS Backup recovery point
         id: create-efs-from-backup
         run: |
