--- a/.github/workflows/ldap-data-refresh.yml
+++ b/.github/workflows/ldap-data-refresh.yml
@@ -138,25 +138,36 @@ jobs:
 
       - name: Get the original EFS id
         run: |
-            echo EFS_FILE_SYSTEM_ID=$(aws efs describe-file-systems --creation-token ${{ github.event.inputs.source_env }}-ldap --output text --query 'FileSystems[0].FileSystemId') >> $GITHUB_ENV
+            EFS_FILE_SYSTEM_ID=$(aws efs describe-file-systems --creation-token ${{ github.event.inputs.source_env }}-ldap --output text --query 'FileSystems[0].FileSystemId')
+            if [[ $? -eq 0 ]]; then
+              echo $EFS_FILE_SYSTEM_ID >> $GITHUB_ENV
+            else
+              echo "Failed to get EFS ID"
+              exit 1
+            fi
 
       - name: Create a temporary EFS resource with AWS Backup recovery point
         id: create-efs-from-backup
         run: |
-          echo RESTORE_JOB_ID=$(aws backup start-restore-job --recovery-point-arn ${{ env.RECOVERY_POINT_ARN }} --iam-role-arn arn:aws:iam::${{ vars.AWS_ACCOUNT_ID }}:role/ldap-data-refresh-role-${{ github.event.inputs.source_env }} --metadata file-system-id=${{ env.EFS_FILE_SYSTEM_ID }},newFileSystem=true,CreationToken=gha-ldap-data-refresh-${{github.run_id }},Encrypted=false,PerformanceMode=generalPurpose --resource-type EFS --no-copy-source-tags-to-restored-resource --output text --query 'RestoreJobId') >> $GITHUB_OUTPUT
-          
+          RESTORE_JOB_ID=$(aws backup start-restore-job --recovery-point-arn ${{ env.RECOVERY_POINT_ARN }} --iam-role-arn arn:aws:iam::${{ vars.AWS_ACCOUNT_ID }}:role/ldap-data-refresh-role-${{ github.event.inputs.source_env }} --metadata file-system-id=${{ env.EFS_FILE_SYSTEM_ID }},newFileSystem=true,CreationToken=gha-ldap-data-refresh-${{github.run_id }},Encrypted=false,PerformanceMode=generalPurpose --resource-type EFS --no-copy-source-tags-to-restored-resource --output text --query 'RestoreJobId')
+          if [[ $? -eq 0 ]]; then
+            echo $RESTORE_JOB_ID >> $GITHUB_OUTPUT
+          else
+            echo "Failed to get RESTORE_JOB_ID"
+            exit 1
+          fi
+
       - name: Wait for restore to complete
         id: wait-for-restore
         run: |
           while true; do
             RESTORE_JOB_STATUS=$(aws backup describe-restore-job --restore-job-id ${{ steps.create-efs-from-backup.outputs.RESTORE_JOB_ID }} --output text --query 'Status')
-            if [[ "${RESTORE_JOB_STATUS}" == "COMPLETED" ]]; then
-              echo "RESTORE_JOB_STATUS=${RESTORE_JOB_STATUS}" >> $GITHUB_OUTPUT
+            if [[ $RESTORE_JOB_STATUS == "COMPLETED" ]]; then
               break
-            elif [[ "${RESTORE_JOB_STATUS}" == "ABORTED" ]]; then
+            elif [[ $RESTORE_JOB_STATUS == "ABORTED" ]]; then
               echo "RESTORE_JOB_STATUS=${RESTORE_JOB_STATUS}" >> $GITHUB_OUTPUT
               exit 1
-            elif [[ "${RESTORE_JOB_STATUS}" == "FAILED" ]]; then
+            elif [[ $RESTORE_JOB_STATUS == "FAILED" ]]; then
               echo "RESTORE_JOB_STATUS=${RESTORE_JOB_STATUS}" >> $GITHUB_OUTPUT
               echo "Restore job failed"
               exit 1
@@ -169,8 +180,13 @@ jobs:
       - name: Get temp EFS ID
         id: get-temp-efs-id
         run: |
-          echo TEMP_EFS_ID=$(aws efs describe-file-systems --creation-token gha-ldap-data-refresh-${{github.run_id }} --output text --query 'FileSystems[0].FileSystemId') >> $$GITHUB_ENV
-
+          TEMP_EFS_ID=$(aws efs describe-file-systems --creation-token gha-ldap-data-refresh-${{github.run_id }} --output text --query 'FileSystems[0].FileSystemId')
+          if [[ $? -eq 0 ]]; then
+            echo $TEMP_EFS_ID >> $GITHUB_OUTPUT
+          else
+            echo "Failed to get $TEMP_EFS_ID"
+            exit 1
+          fi
       - name: Create datasync location for temp efs
         id: create-datasync-location
         run: |
